--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -4,6 +4,11 @@
   top: 0;
   bottom: 0;
   width: 306px;
+  padding: 26px 58px 33px 58px;
   background-color: #fff;
   box-shadow: 10px 3px 15px rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-radius: 0 0 20px 0;
 }
