--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import '../styles/typography.css';
+
 *,
 *::before,
 *::after {
@@ -11,6 +13,7 @@
 html,
 body {
   height: 100%;
+  font-family: 'Segoe', sans-serif;
 }
 
 body {
