--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -4,3 +4,10 @@
   margin: 20px 0 0 0;
   grid-template-columns: repeat(3, 1fr);
 }
+
+@media (max-width: 1120px) {
+  .wrapper {
+    grid-template-columns: 1fr;
+    row-gap: 19px;
+  }
+}
