--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -12,3 +12,18 @@
   max-width: 980px;
   padding: 37px;
 }
+
+@media (max-width: 1200px) {
+  .container {
+    margin: 0 0 0 250px;
+  }
+  .content {
+    padding: 25px;
+  }
+}
+
+@media (max-width: 780px) {
+  .container {
+    margin: 0;
+  }
+}
