--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -13,3 +13,38 @@
   border-radius: 0 0 20px 0;
   overflow: auto;
 }
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.close button {
+  background-color: transparent;
+  border: none;
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .wrapper {
+    width: 250px;
+    padding: 26px 25px 33px 25px;
+  }
+}
+
+@media (max-width: 780px) {
+  .wrapper {
+    z-index: 3;
+    transform: translate(-250px, 0);
+    transition: all ease 0.2s;
+  }
+
+  .close button {
+    display: block;
+  }
+
+  .open {
+    transform: translate(0, 0);
+  }
+}
